Solved major bug in the Median Filter code. Changes in setting layout view. Crteated a new blue style for progress bar.