@@ -2,6 +2,7 @@ package com.vahid.accelerometer.filter;
 
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.LinkedList;
 import java.util.PriorityQueue;
 
 public class MovingMedian {
@@ -9,16 +10,16 @@ public class MovingMedian {
 	private int index;
 
 	private PriorityQueue<Float> upperQueue;
-	private ArrayList<Float> upperList;
+	private LinkedList<Float> upperList;
 	private PriorityQueue<Float> lowerQueue;
-	private ArrayList<Float> lowerList;
+	private LinkedList<Float> lowerList;
 
 	public MovingMedian(int size) {
 		this.index = 0;
 		this.size = size;
 
-		upperList = new ArrayList<>();
-		lowerList = new ArrayList<>();
+		upperList = new LinkedList<>();
+		lowerList = new LinkedList<>();
 
 		lowerQueue = new PriorityQueue<Float>(20, new Comparator<Float>() {
 
@@ -34,27 +35,36 @@ public class MovingMedian {
 	}
 
 	public void pushValue(float newValue) {
-
 		// adding the number to proper heap
 		if (newValue >= upperQueue.peek()) {
 			if (index >= size)
-				upperQueue.remove(upperList.remove(0));
+				upperQueue.remove(upperList.removeFirst());
 
 			upperList.add(newValue);
 			upperQueue.add(newValue);
 		} else {
 			if (index >= size)
-				lowerQueue.remove(lowerList.remove(0));
+				lowerQueue.remove(lowerList.removeFirst());
 
 			lowerList.add(newValue);
 			lowerQueue.add(newValue);
 		}
 
-		// balancing the heaps
-		if (upperQueue.size() - lowerQueue.size() == 2)
-			lowerQueue.add(upperQueue.poll());
-		else if (lowerQueue.size() - upperQueue.size() == 2)
-			upperQueue.add(lowerQueue.poll());
+		// balancing the heaps; doesn't happen for lists!
+		if (upperQueue.size() - lowerQueue.size() == 2) {
+			float temp = upperQueue.poll();
+			lowerQueue.add(temp);
+			
+			upperList.remove(temp);
+			lowerList.add(temp);
+		}
+		else if (lowerQueue.size() - upperQueue.size() == 2){
+			float temp = upperQueue.poll();
+			upperQueue.add(temp);
+			
+			lowerList.remove(temp);
+			upperList.add(temp);
+		}
 
 		index++;
 	}
